--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@eslint/js": "^8.57.1",
     "@eslint/json": "^0.12.0",
     "@eslint/markdown": "^6.4.0",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.2",
     "@types/jest": "^29.5.11",
@@ -56,6 +57,9 @@
     "typescript-eslint": "^8.33.1"
   },
   "dependencies": {
+    "@types/cors": "^2.8.18",
+    "better-sqlite3": "^11.10.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0"
   }
