--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@eslint/js": "^8.57.1",
     "@eslint/json": "^0.12.0",
     "@eslint/markdown": "^6.4.0",
+    "@prisma/client": "^5.13.0",
     "@types/better-sqlite3": "^7.6.13",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.2",
@@ -49,7 +50,7 @@
     "jest": "^29.7.0",
     "lint-staged": "^16.1.0",
     "prettier": "^3.1.1",
-    "prisma": "^5.7.1",
+    "prisma": "^5.13.0",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.19.4",
