--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "tsc",
     "test": "jest --config jest.config.mjs",
     "test:watch": "jest --watch --config jest.config.mjs",
+    "test:coverage": "jest --coverage",
     "migrate": "prisma migrate deploy",
     "migrate:dev": "prisma migrate dev",
     "lint": "eslint \"src/**/*.ts\" --max-warnings 0",
@@ -38,7 +39,7 @@
     "@types/better-sqlite3": "^7.6.13",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.2",
-    "@types/jest": "^29.5.11",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
@@ -51,7 +52,7 @@
     "lint-staged": "^16.1.0",
     "prettier": "^3.1.1",
     "prisma": "^5.13.0",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.3.4",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
@@ -62,6 +63,8 @@
     "better-sqlite3": "^11.10.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "winston": "^3.17.0",
+    "zod": "^3.25.61"
   }
 }
